--- a/demo.html
+++ b/demo.html
@@ -13,10 +13,10 @@
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
                 if (this.readyState == 4 && this.status == 200) {
-                    console.log(this.responseText);
+                    console.log(JSON.parse(this.responseText));
                 }
             };
-            xhttp.open("GET", BASE_URL + "hello", true);
+            xhttp.open("GET", BASE_URL + "generator?filas=13&borde=true&relleno=true", true);
             xhttp.send();
         }
         loadData();
